src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>About_Us__c</fullName>
        <label>About Us</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Zoho Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Mgmt_Notes_from_Zoho__c</fullName>
        <label>Acct Mgmt Notes from Zoho</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_POS_Amount_del_del__c</fullName>
        <label>Average POS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Ticket_Size__c</fullName>
        <label>Average POS Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blog_Site__c</fullName>
        <label>Blog Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attractions / Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Circular_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors_Used__c</fullName>
        <label>Competitors Used</label>
        <picklist>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LivingSocial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopkick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SpotOn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Activities__c</fullName>
        <label>Current Marketing Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discover_SMR__c</fullName>
        <label>Discover SMR</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agata Kaufman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Schneider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beth Mintz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline Marino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Kmiec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donna Pagnutti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanette Andino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Moreland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathleen Nafziger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Rigopoulos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teri Owens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd Douthat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Database_Size__c</fullName>
        <label>Email Database Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <label>Email Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Solution_Program__c</fullName>
        <label>Email Solution/Program</label>
        <picklist>
            <picklistValues>
                <fullName>Mail Chimp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_to_Merchant_List_Sent_from_Zoho__c</fullName>
        <label>Email to Merchant List Sent from Zoho</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_Newsletters__c</fullName>
        <label>Emails/Newsletters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Initial_Fee__c</fullName>
        <label>Estimated Initial Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_Post_for_Merchant__c</fullName>
        <label>Facebook Post for Merchant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Merchant_Email_Sent__c</fullName>
        <label>First Merchant Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Store_Events_Contests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Store Events/Contests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_id__c</fullName>
        <label>Internal Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget_Term__c</fullName>
        <label>Marketing Budget Term</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget__c</fullName>
        <label>Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes_from_Zoho__c</fullName>
        <label>Marketing Notes from Zoho</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marqeta_Posted_on_Facebook__c</fullName>
        <label>Marqeta Posted on Facebook</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marqeta_Tweeted__c</fullName>
        <label>Marqeta Tweeted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql db field for data load</inlineHelpText>
        <label>Merchant Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_Included_in_M_Email__c</fullName>
        <label>Merchant Included in +M Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merchant_Tweet__c</fullName>
        <label>Merchant Tweet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Locations__c</fullName>
        <label>No of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>Organization ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Owner__c</fullName>
        <label>Potential Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ashwin Ranganathan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christina Turkich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Gardner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mari-Frances Bentvelzen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Pruszinske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serena Hom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shirley Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vic Tortorici</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programs_Participating_In__c</fullName>
        <label>Programs Participating In</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoWallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Solution</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Radio_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radio Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regularly_Posts_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regularly Posts to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regularly_Tweets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regularly Tweets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Merchant_Email_Sent__c</fullName>
        <label>Second Merchant Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type1__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T1__c</fullName>
        <inlineHelpText>Internal Use</inlineHelpText>
        <label>T1</label>
        <picklist>
            <picklistValues>
                <fullName>Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Demographics__c</fullName>
        <label>Target Demographics</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age: 18-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Professional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Television_Ads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Television Ads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Swipe__c</fullName>
        <label>Test Swipe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Merchant_Email_Sent__c</fullName>
        <label>Third Merchant Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vanity_URL__c</fullName>
        <label>Vanity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Welcome_Kit_Mailed_Date_from_Zoho__c</fullName>
        <label>Welcome Kit Mailed Date from Zoho</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>affiliate_organization__c</fullName>
        <label>Affiliate Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>brand_id__c</fullName>
        <label>Brand Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>category_id__c</fullName>
        <externalId>true</externalId>
        <label>Category Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>latitude__c</fullName>
        <label>Latitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>longitude__c</fullName>
        <label>Longitude</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organization_type__c</fullName>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rejection_reason__c</fullName>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>soon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Enterprise_Record</fullName>
        <active>true</active>
        <description>For all Enterprise Accounts</description>
        <label>Enterprise Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchant_Record_Type</fullName>
        <active>true</active>
        <description>For Brand Accounts</description>
        <label>Merchant Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Record_Type</fullName>
        <active>true</active>
        <description>For Organization Accounts</description>
        <label>Organization Record Type</label>
    </recordTypes>
</CustomObject>